--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VocabFlip</title>
+  <title>VocabFlip AI</title>
   <meta name="description" content="VocabFlip: AI-powered German vocabulary flash card app. Learn, flip, and master German words with ease!" />
 </head>
 <body>
