--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
+    <meta name="touch-action" content="none" />
+    <meta name="ms-touch-action" content="none" />
     <title>VocabFlip AI</title>
     <meta
       name="description"
       content="VocabFlip: AI-powered German vocabulary flash card app. Learn, flip, and master German words with ease!"
     />
-    <meta name="theme-color" content="#8B5CF6" />
+    <meta
+      name="theme-color"
+      content="#fafafa"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#0a0a0a"
+      media="(prefers-color-scheme: dark)"
+    />
     <meta name="color-scheme" content="light dark" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
